--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -392,25 +392,6 @@ video {
 [hidden] {
   display: none;
 }
-    html {
-        /*padding: 3em 1em;*/
-        margin: auto;
-        line-height: 1.75;
-        font-size: 1.4em;
-        font-family: monospace;
-    }
-
-    h1,h2,h3,h4,h5,h6 {
-        margin: 2em 0 1em;
-    }
-
-    p,ul,ol {
-        margin-bottom: 1em;
-        color: #1d1d1d;
-    }
-    .font-outline {
-        -webkit-text-stroke: 1px black;
-    }
 
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
@@ -544,15 +525,6 @@ video {
     max-width: 1536px;
   }
 }
-.sticky {
-  position: sticky;
-}
-.top-0 {
-  top: 0px;
-}
-.top-\[100vh\] {
-  top: 100vh;
-}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -563,6 +535,15 @@ video {
 }
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+.mb-8 {
+  margin-bottom: 2rem;
+}
+.mt-4 {
+  margin-top: 1rem;
+}
+.mt-8 {
+  margin-top: 2rem;
 }
 .mt-auto {
   margin-top: auto;
@@ -579,8 +560,14 @@ video {
 .grid {
   display: grid;
 }
+.hidden {
+  display: none;
+}
 .h-48 {
   height: 12rem;
+}
+.h-5 {
+  height: 1.25rem;
 }
 .h-px {
   height: 1px;
@@ -591,8 +578,8 @@ video {
 .min-h-screen {
   min-height: 100vh;
 }
-.w-full {
-  width: 100%;
+.w-5 {
+  width: 1.25rem;
 }
 .flex-grow {
   flex-grow: 1;
@@ -627,10 +614,18 @@ video {
 .gap-3 {
   gap: 0.75rem;
 }
+.gap-5 {
+  gap: 1.25rem;
+}
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 .whitespace-pre {
   white-space: pre;
@@ -638,8 +633,14 @@ video {
 .rounded {
   border-radius: 0.25rem;
 }
+.rounded-lg {
+  border-radius: 0.5rem;
+}
 .border-2 {
   border-width: 2px;
+}
+.border-b {
+  border-bottom-width: 1px;
 }
 .border-pink-500 {
   --tw-border-opacity: 1;
@@ -665,8 +666,14 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.p-12 {
+  padding: 3rem;
+}
 .p-2 {
   padding: 0.5rem;
+}
+.p-2\.5 {
+  padding: 0.625rem;
 }
 .p-3 {
   padding: 0.75rem;
@@ -686,15 +693,20 @@ video {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.pt-1 {
-  padding-top: 0.25rem;
-}
 .text-right {
   text-align: right;
+}
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 .text-5xl {
   font-size: 3rem;
@@ -708,6 +720,10 @@ video {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
 .font-semibold {
   font-weight: 600;
 }
@@ -720,6 +736,10 @@ video {
 .text-slate-700 {
   --tw-text-opacity: 1;
   color: rgb(51 65 85 / var(--tw-text-opacity));
+}
+.text-stone-100 {
+  --tw-text-opacity: 1;
+  color: rgb(245 245 244 / var(--tw-text-opacity));
 }
 .text-white {
   --tw-text-opacity: 1;
@@ -736,6 +756,31 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(244 244 245 / var(--tw-bg-opacity));
 }
+.hover\:text-slate-700:hover {
+  --tw-text-opacity: 1;
+  color: rgb(51 65 85 / var(--tw-text-opacity));
+}
+.hover\:duration-700:hover {
+  transition-duration: 700ms;
+}
+:is(.dark .dark\:block) {
+  display: block;
+}
+:is(.dark .dark\:hidden) {
+  display: none;
+}
+:is(.dark .dark\:border-zinc-900) {
+  --tw-border-opacity: 1;
+  border-color: rgb(24 24 27 / var(--tw-border-opacity));
+}
+:is(.dark .dark\:bg-zinc-800) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 39 42 / var(--tw-bg-opacity));
+}
+:is(.dark .dark\:text-white) {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
 :is(.dark .dark\:text-zinc-200) {
   --tw-text-opacity: 1;
   color: rgb(228 228 231 / var(--tw-text-opacity));
@@ -744,26 +789,3 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
 }
-@media (min-width: 640px) {
-
-  .sm\:w-2\/3 {
-    width: 66.666667%;
-  }
-}
-@media (min-width: 768px) {
-
-  .md\:w-1\/4 {
-    width: 25%;
-  }
-
-  .md\:w-3\/4 {
-    width: 75%;
-  }
-}
-@media (min-width: 1024px) {
-
-  .lg\:w-1\/2 {
-    width: 50%;
-  }
-}
-
